new icon aliases added

--- a/resources.qrc
+++ b/resources.qrc
@@ -6,5 +6,7 @@
     <file alias="text.svg">assets/text-selection-svgrepo-com.svg</file>
     <file alias="select.svg">assets/select-svgrepo-com.svg</file>
     <file alias="shapes.svg">assets/shapes-1-svgrepo-com.svg</file>
+    <file alias="palette.svg">assets/pallete-2-svgrepo-com.svg</file>
+    <file alias="fonts.svg">assets/font-x-generic-svgrepo-com.svg</file>
 </qresource>
 </RCC>
